--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -15,7 +15,11 @@
         <select asp-for="MovieGenre" asp-items="Model.Genres">
             <option value="">All</option>
         </select>
-
+        <!--
+            <select asp-for="MovieRelease" asp-items="Model.ReleaseDate">
+                <option value="">All</option>
+            </select>
+    -->
         Title: <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
     </p>
