--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -16,15 +16,21 @@
             <option value="">All</option>
         </select>
 
-        <select asp-for="MovieRelease" asp-items="Model.ReleaseDate">
-            <option value="">All</option>
+        <select asp-for="MovieSort" asp-items="Model.SortOption">
+            <option value="A">Acs</option>
+            <option value="D">Dec</option>
         </select>
 
         Title: <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
-
+<a asp-page="/Pages/Movies/Index" asp-route-sortOrder="a">
+    Sort By Ascending
+</a>
+<a asp-page="/Pages/Movies/Index" asp-route-sortOrder="d">
+    Sort By Descending
+</a>
 <table class="table">
     <thead>
         <tr>
@@ -32,7 +38,7 @@
                 @Html.DisplayNameFor(model => model.Movies[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
+                    @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Genre)
