Edited Title and Content

--- a/MvcMovie/Views/Movies/Details.cshtml
+++ b/MvcMovie/Views/Movies/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcMovie.Models.Movie
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "View Movie Details";
 }
 
-<h1>Details</h1>
+    <h1>View Movie Details</h1>
 
 <div>
     <h4>Movie</h4>
