--- a/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/Views/Movies/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model MvcMovie.Models.Movie
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add a New Movie";
 }
 
-<h1>Create</h1>
+    <h1>Add a New Movie</h1>
 
 <h4>Movie</h4>
 <hr />
@@ -24,8 +24,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <input asp-for="Genre" class="form-control" />
-                <span asp-validation-for="Genre" class="text-danger"></span>
+                <!--<input asp-for="Genre" class="form-control" />
+        <span asp-validation-for="Genre" class="text-danger"></span>
+    -->
+
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
