--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MvcMovie.Models.MovieGenreViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "View All Movies";
 }
 
-<h1>Index</h1>
+<h1>View All Movies</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add A New Movie</a>
 </p>
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
