--- a/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/Views/Movies/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Add a New Movie";
 }
 
-    <h1>Add a New Movie</h1>
+<h1>Add a New Movie</h1>
 
 <h4>Movie</h4>
 <hr />
@@ -24,10 +24,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Genre" class="control-label"></label>
-                <!--<input asp-for="Genre" class="form-control" />
-        <span asp-validation-for="Genre" class="text-danger"></span>
-    -->
-
+                <input asp-for="Genre" class="form-control" />
+                <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
@@ -36,9 +34,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
-                <span asp-validation-for="Rating" class="text-danger"></span>
-            </div>
+                <select asp-for="Rating" class="form-control">
+                    <option class="text-danger" value="G">G</option>
+                    <option class="text-danger" value="PG">PG</option>
+                    <option class="text-danger" value="PG 13">PG 13</option>
+                </select>
+            </div>           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
