--- a/MvcMovie/Views/Movies/Details.cshtml
+++ b/MvcMovie/Views/Movies/Details.cshtml
@@ -4,37 +4,65 @@
     ViewData["Title"] = "View Movie Details";
 }
 
-    <h1>View Movie Details</h1>
+<h1>View Movie Details</h1>
 
 <div>
     <h4>Movie</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Genre)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Genre)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
     </dl>
+</div>
+<div class="col">
+    @{
+        if (Model.Title == "Carthage")
+        {
+            <span id="10"><img src="https://d2jc79253juilm.cloudfront.net/product-images/000/724/582/detail/Carthage.jpg?1506460666" alt="Carthage" style="width:200px"/></span>
+        }
+        else if (Model.Title == "Jonah and the Great Fish")
+        {
+            <span id="7"><img src="https://d2jc79253juilm.cloudfront.net/product-images/000/638/811/detail/JonahGreatFishDVD5054305.jpg" alt="Jonah and the Great Fish" style="width:200px"/></span>
+        }
+        else if (Model.Title == "The Other Side of Heaven")
+        {
+            <span id="7"><img src="https://d1hdlz9ljonw49.cloudfront.net/product-images/000/735/922/detail/the-other-side-of-heaven-book.png?1567714236" alt="The Other Side of Heaven" style="width:200px"/></span>
+        }
+        else if (Model.Title == "Christmas in Conway")
+        {
+            <span id="7"><img src="https://d26iejr7yj7kfh.cloudfront.net/product-images/000/737/720/detail/Christmas_in_Conway.jpg?1578947213" alt="Christmas in Conway" style="width:200px"/></span>
+        }
+        else if (Model.Title == "Christmas Jars")
+        {
+            <span id="7"><img src="https://d26iejr7yj7kfh.cloudfront.net/product-images/000/736/274/detail/Christmas_Jars_DVD.png?1569438712" alt="Christmas Jars" style="width:200px" /></span>
+        }
+        else { 
+<span id="7"><img src="https://d26iejr7yj7kfh.cloudfront.net/product-images/000/736/274/detail/Christmas_Jars_DVD.png?1569438712" alt="Christmas Jars" style="width:200px" /></span>
+        }
+    }
+    <span asp-validation-for="Id" class="text-danger"></span>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
