--- a/MvcMovie/Views/Movies/Edit.cshtml
+++ b/MvcMovie/Views/Movies/Edit.cshtml
@@ -29,6 +29,14 @@
                 <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Rating" class="control-label"></label>
+                <select asp-for="Rating" class="form-control">
+                    <option class="text-danger" value="G">G</option>
+                    <option class="text-danger" value="PG">PG</option>
+                    <option class="text-danger" value="PG 13">PG 13</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
