--- a/MvcMovie/Views/Movies/Create.cshtml
+++ b/MvcMovie/Views/Movies/Create.cshtml
@@ -39,7 +39,11 @@
                     <option class="text-danger" value="PG">PG</option>
                     <option class="text-danger" value="PG 13">PG 13</option>
                 </select>
-            </div>           
+            </div>
+            <div><asp:FileUpload ID="" runat="server" />
+            <br>
+            <asp:Button ID="Upload" runat="server" Text="Upload" />
+                      </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
