Changes made to layout for overall appearence.

--- a/MvcMovie/Views/Home/Index.cshtml
+++ b/MvcMovie/Views/Home/Index.cshtml
@@ -2,7 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome to LDS Movie Tracker</h1>
+        <p>This Website allows you to add appropriate movies to a database.</p>
+
+        <span><img src="https://d2jc79253juilm.cloudfront.net/product-images/000/724/582/detail/Carthage.jpg?1506460666" alt="Carthage" style="width:200px" /></span>
+
+        <span><img src="https://d2jc79253juilm.cloudfront.net/product-images/000/638/811/detail/JonahGreatFishDVD5054305.jpg" alt="Jonah and the Great Fish" style="width:200px" /></span>
+
+        <span><img src="https://d1hdlz9ljonw49.cloudfront.net/product-images/000/735/922/detail/the-other-side-of-heaven-book.png?1567714236" alt="The Other Side of Heaven" style="width:200px" /></span>
+
+        <span><img src="https://d26iejr7yj7kfh.cloudfront.net/product-images/000/737/720/detail/Christmas_in_Conway.jpg?1578947213" alt="Christmas in Conway" style="width:200px" /></span>
+
+        <span><img src="https://d26iejr7yj7kfh.cloudfront.net/product-images/000/736/274/detail/Christmas_Jars_DVD.png?1569438712" alt="Christmas Jars" style="width:200px" /></span>
+
+    </div>
