--- a/MvcMovie/Views/Home/Privacy.cshtml
+++ b/MvcMovie/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>By using this site you are agreeing to having your data sold to the highest bidder. Thank you for your cooperation! </p>
